gatewayApi/base/resources/gatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: placeholder-gatewayclass
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  controllerName: gateway.envoyproxy.io/placeholder-gatewayclass-controller
