gatewayApi/base/resources/routeHttpToHttpsRedirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  parentRefs:
    - name: huntinternal
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301 # permanent redirect
      matches:
        - path:
            type: PathPrefix
            value: /
